--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,60 @@
 body {
-  background-color: lightgray;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 
-  font-family: helvetica
+  background-color: lightgray;
+  font-family: helvetica;
 
 }
 
+input {
+  height: 25px;
+  width: 50%;
+  box-shadow: 5px 5px 2px #888888;
 
+  font-size: 20px;
+  text-align: center;
+ }
+
+ h1 {
+  margin: 35px;
+  font-size: 65px;
+  }
+
+ p{
+  width: 75%;
+  margin: 25px;
+  text-align: center;
+ }
+
+#container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  margin-top: 50px;
+  width: 90%;
+  border: solid gray 2px;
+  }
+
+#where {
+  padding: 25px;
+
+ }
+
+#between {
+  height: 10px;
+  background-color: lightgray;
+
+ }
+
+ #submit {
+  border: solid black 1px;
+  box-shadow: 1px;
+  margin: auto;
+  padding: 10px;
+
+  height: 50px;
+  width: %;
+  }
